Removed the Trusted By from Home, bc it causing some layout issues

--- a/Client/src/components/trustedBy/TrustedBy.scss
+++ b/Client/src/components/trustedBy/TrustedBy.scss
@@ -4,8 +4,8 @@
     display: flex;
     justify-content: center;
   
-    .container {
-      max-width: 760px;
+    .contain {
+      max-width: 7100%;
       display: flex;
       align-items: center;
       gap: 20px;
